<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/white"
    android:padding="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="15sp"
                android:layout_marginLeft="15sp"
                android:layout_marginRight="15sp"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="7sp"
                android:textSize="25sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/user_motto"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textSize="13sp"
            android:layout_margin="5dp"
            android:paddingStart="12dp"
            android:paddingEnd="17dp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/lidevidebackground"/>

    <LinearLayout
        android:id="@+id/my_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="3dp"
            android:src="@drawable/theme"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="10sp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/side_functions_theme"
            android:textSize="17sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lidevidebackground"/>

    <LinearLayout
        android:id="@+id/my_article"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="3dp"
            android:src="@drawable/my_article"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="10sp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/side_functions_my_article"
            android:textSize="17sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/lidevidebackground"/>

    <LinearLayout
        android:id="@+id/version_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="3dp"
            android:src="@drawable/version"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="10sp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/side_functions_my_version_control"
            android:textSize="17sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/lidevidebackground"/>

    <LinearLayout
        android:id="@+id/my_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:padding="3dp"
            android:src="@drawable/version"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="10sp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/side_functions_my_review_list"
            android:textSize="17sp"/>

    </LinearLayout>

</LinearLayout>
